--- a/homepage.html
+++ b/homepage.html
@@ -5,15 +5,45 @@
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
   <link rel="stylesheet" type="text/css" href="homepage.css">
 </head>
-<body style="border-style:groove">
-
+<body>
+<div class="nav">
+  <div style="float:left;margin:0 60px">
+    <img src="logo.png" style="width:100px;height: 40px">
+  </div>
+    <ul>
+        <li><a href="#">HOME</a>
+            <ul>
+                <li><a a href="#">IMAGE</a></li>
+                <li><a a href="#">SLIDER</a></li>
+                <li><a a href="#">SLIDESHOW</a></li>
+                <li><a a href="#">YOUTUBE VIDEO</a>
+                <li><a a href="#">VIMEO VIDEO</a>
+                <li><a a href="#">ONE PAGE</a>
+                    <ul>
+                      <li><a a href="#">IMAGE</a></li>
+                      <li><a a href="#">SLIDER</a></li>
+                      <li><a a href="#">SLIDESHOW</a></li>
+                      <li><a a href="#">YOUTUBE VIDEO</a>
+                      <li><a a href="#">VIMEO VIDEO</a>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li><a a href="#">PORTFOLIO</a></li>
+        <li><a a href="#">ABOUT US</a></li>
+        <li><a a href="#">SERVICES</a></li>
+        <li><a a href="#">CONTACT</a></li>
+        <li><a a href="#">BLOG</a></li>
+        <li><a a href="#">PAGES</a></li>
+    </ul>
+</div>
 <div class="start1" id="1">
   <div class="title">
     <h1 style="font-size:50px ;font-weight: 900">MONOLIT STUDIO</h1>
     <p style="letter-spacing:15px ;font-size:25px;font-family: monospace;font-weight: 20">ARCHITECTURE</p>
   </div>
   <a href="#2" class="fa fa-angle-down" ></a>
-  <div style="position:fixed;left:0;top:0;height:100%;width:80px;background-color: mediumseagreen;z-index: 10">
+  <div style="position:fixed;left:0;top:0;height:100%;width:80px;background-color: black;z-index: 10">
     <div style="width:60px;height:2px;background-color:white;position: absolute;left:10px;top: 80px"></div>
     <div style="color:white;font-size: 15px;position: absolute;bottom: 30px;left: 40%;">
       <i class="fab fa-facebook-f"></i>
@@ -185,7 +215,7 @@
   </div>
   <br>
   <div style="position:relative">
-    <i class="fas fa-arrow-right" style="font-size:30px;color:black;position: absolute;left:47% "></i>
+    <i class="fas fa-long-arrow-alt-right" style="font-size:30px;color:black;position: absolute;left:47% "></i>
   </div>
   <br>
   <br>
